cmake_minimum_required (VERSION 2.8)
project(DataStruct)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(Linkedlist/SingleLinkedlist)
add_subdirectory(Stack)	
add_subdirectory(Queue)		
add_subdirectory(BinTree)
add_subdirectory(DFS)
add_subdirectory(BFS)
add_subdirectory(CPlusBase)		
add_subdirectory(Graph)
add_subdirectory(Thread)
add_subdirectory(Sort)